--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,51 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  analyze:
+    name: Analyze ${{matrix.language}} code for ${{matrix.os}}
+    # Will analyse code for each language x os
+    runs-on: ${{matrix.os}}
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+  
+    strategy:
+      fail-fast: false
+      # If `fail-fast: true`, GitHub will cancel all in-progress and queued jobs in the matrix if any job in the matrix fails
+      matrix:
+        language: [ 'javascript' ]
+        os : [ubuntu-latest, windows-latest]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    # Initializes the CodeQL tools for scanning.
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v3
+      with:
+        config: |
+            queries:
+              - security-extended
+              - security-and-quality
+            languages: ${{ matrix.language }}
+            paths-ignore:
+              - 'tests/*.test.js'
+              - 'node_modules'
+      # If you wish to specify custom queries, you can do so here or in a config file.
+      # By default, queries listed here will override any specified in a config file.
+      # Prefix the list here with "+" to use these queries and those in the config file.
+      
+      # Details on CodeQL's query packs refer to : https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
+      # queries: security-extended,security-and-quality
+
+        
+    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
+    # If this step fails, then you should remove it and run the build manually (see below)
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v3
+
   test:
     runs-on: ubuntu-latest
 
