--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,7 @@ jobs:
       fail-fast: false
       # If `fail-fast: true`, GitHub will cancel all in-progress and queued jobs in the matrix if any job in the matrix fails
       matrix:
-        language: [ 'javascript' ]
-        os : [ubuntu-latest, windows-latest]
+        os : [ubuntu-latest]
 
     steps:
     - name: Checkout repository
@@ -44,13 +43,12 @@ jobs:
       uses: github/codeql-action/init@v3
       with:
         config: |
-            queries:
-              - security-extended
-              - security-and-quality
-            languages: ${{ matrix.language }}
-            paths-ignore:
-              - 'tests/*.test.js'
-              - 'node_modules'
+          queries:
+            - security-extended
+            - security-and-quality
+          paths-ignore:
+            - 'tests/*.test.js'
+            - 'node_modules'
       # If you wish to specify custom queries, you can do so here or in a config file.
       # By default, queries listed here will override any specified in a config file.
       # Prefix the list here with "+" to use these queries and those in the config file.
@@ -65,6 +63,9 @@ jobs:
       uses: github/codeql-action/autobuild@v3
 
   test:
+    strategy:
+        matrix:
+          node-versions : ['16', 'latest']
     runs-on: ubuntu-latest
 
     steps:
@@ -74,7 +75,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version:  ${{ matrix.node-versions }}
 
       - name: Install dependencies
         run: npm install
