--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,39 +26,28 @@ jobs:
       actions: read
       contents: read
       security-events: write
-  
+
     strategy:
       fail-fast: false
       # If `fail-fast: true`, GitHub will cancel all in-progress and queued jobs in the matrix if any job in the matrix fails
       matrix:
-        os : [ubuntu-latest]
+        os: [ubuntu-latest]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        queries: security-extended
-      # If you wish to specify custom queries, you can do so here or in a config file.
-      # By default, queries listed here will override any specified in a config file.
-      # Prefix the list here with "+" to use these queries and those in the config file.
-      
-      # Details on CodeQL's query packs refer to : https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
-      # queries: security-extended,security-and-quality
-
-        
-    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-    # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v3
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          queries: security-extended
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
 
   test:
     strategy:
-        matrix:
-          node-versions : ['16', 'latest']
+      matrix:
+        node-versions: ['16', 'latest']
     runs-on: ubuntu-latest
 
     steps:
@@ -68,7 +57,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version:  ${{ matrix.node-versions }}
+          node-version: ${{ matrix.node-versions }}
 
       - name: Install dependencies
         run: npm install
@@ -79,6 +68,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout
